5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4515/executions/1668_1398.log
== TEST (2019-04-15 18:10:55) 
-- CODE:
tvoo = int(input("Tempo de voo em minutos :"))

if(tvoo =< 200):
	ctotal = 5000+(100*tvoo)
else:	
	ctotal = 8000+(100*200)+(tvoo-200)*90
print(round(ctotal,2))	
	

-- ERROR:
File "XXXX", line 3
    if(tvoo =< 200):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:11:12) 
-- CODE:
tvoo = int(input("Tempo de voo em minutos :")

if(tvoo =< 200):
	ctotal = 5000+(100*tvoo)
else:	
	ctotal = 8000+(100*200)+(tvoo-200)*90
print(round(ctotal,2))
	

-- ERROR:
File "XXXX", line 3
    if(tvoo =< 200):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:11:40) 
-- CODE:
tvoo = int(input("Tempo de voo em minutos :"))

if(tvoo <= 200):
	ctotal = 5000+(100*tvoo)
else:	
	ctotal = 8000+(100*200)+(tvoo-200)*90
print(round(ctotal,2))
	

-- OUTPUT:
17100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:14:42) 
-- CODE:
tvoo = int(input("Tempo de voo em minutos :"))

if(tvoo <= 200):
	ctotal = 5000+(100*tvoo)
else:	
	ctotal = 8000+(100*200)+(tvoo-200)*90
print(round(ctotal,2))
	

-- EXECUTION TIME:
0.156023
-- TEST CASE 1:
---- input:
121
---- correct output:
17100.0
---- user output:
17100
-- TEST CASE 2:
---- input:
450
---- correct output:
50500.0
---- user output:
50500
-- TEST CASE 3:
---- input:
1
---- correct output:
5100.0
---- user output:
5100
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
